Fix broken css.

--- a/app/static/css/manageDepartments.css
+++ b/app/static/css/manageDepartments.css
@@ -28,9 +28,9 @@ h1 {
   height:10px;
   width:20px;
 }
-/* .complianceBtn{
-  style="width:150px;
-} */
+.complianceBtn{
+  width:150px;
+}
 
 #flasher{
 	z-index: 999999;
